--- a/DockerFile
+++ b/DockerFile
@@ -1,54 +1,33 @@
-# Menggunakan image PHP sebagai base
+# Use the official PHP image as a base image
 FROM php:8.0-fpm
 
-# Menginstal ekstensi yang diperlukan
+# Set the working directory inside the container
+WORKDIR /var/www
+
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     libpng-dev \
     libjpeg-dev \
     libfreetype6-dev \
-    libzip-dev \
     unzip \
+    git \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
-    && docker-php-ext-install gd \
-    && docker-php-ext-install pdo pdo_mysql zip
+    && docker-php-ext-install gd
 
-# Mengatur working directory
-WORKDIR /var/www
+# Install Composer
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-# Menyalin composer.lock dan composer.json
-COPY composer.lock composer.json ./
-
-# Menginstal Composer
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
-# Menginstal dependensi Laravel
-RUN composer install --no-autoloader --no-scripts
-
-# Menyalin semua file aplikasi ke dalam image
+# Copy the Laravel application files to the container
 COPY . .
 
-# Menjalankan composer autoload
-RUN composer dump-autoload
+# Install Laravel dependencies
+RUN composer install --no-interaction --prefer-dist --optimize-autoloader
 
-# Mengatur permission untuk storage dan bootstrap/cache
-RUN chown -R www-data:www-data /var/www/storage /var/www/bootstrap/cache
-
-# Mengatur environment
-ENV APP_ENV=local
-ENV APP_DEBUG=true
-ENV APP_KEY=base64:eHEid2/5znqIvdknF/GG2yAuzjjKRBDIa4I+T7rsUng=
-ENV DB_CONNECTION=mysql
-ENV DB_HOST=mysql
-ENV DB_PORT=3306
-ENV DB_DATABASE=nadi
-ENV DB_USERNAME=root
-ENV DB_PASSWORD=root
-
-# Menjalankan perintah untuk migrasi dan seeding database
-RUN php artisan migrate --force && php artisan db:seed --force
+# Set file permissions (if necessary)
+RUN chown -R www-data:www-data storage bootstrap/cache
 
 # Expose the port the app runs on
-EXPOSE 8000
+EXPOSE 8080
 
-# Menjalankan PHP-FPM
+# Run the PHP FastCGI Process Manager
 CMD ["php-fpm"]
